--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 body {
   background-color: rgb(32, 32, 32);
   color: rgb(253, 253, 253);
-  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 ul {
@@ -19,6 +19,15 @@ MAIN_CONTENT===============
 */
 .mainContentWrapper {
   text-align: center;
+}
+
+.toDo {
+  cursor: pointer;
+}
+
+.strikedToDo {
+  cursor: pointer;
+  text-decoration: line-through;
 }
 
 /*
